add save and find by regexp